fix: align last listing in grid

--- a/apps/next-client/src/components/ListingWidget/ListingWidget.module.scss
+++ b/apps/next-client/src/components/ListingWidget/ListingWidget.module.scss
@@ -7,7 +7,7 @@ $fade-transition: all 150ms linear;
 
 .card {
     @apply border border-gray-300 rounded-md bg-paper;
-    width: 16rem;
+    width: 18rem;
     height: 16rem;
     cursor: pointer;
     overflow: hidden;
